# SuperUtilities-Python3

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/superutilities/: __init__.py  config.toml  main.py
src/superutilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
super_utilities/: SuperUtilities.py
